Dark mode: Fix GitHub buttons

--- a/app/static/css/darktheme.css
+++ b/app/static/css/darktheme.css
@@ -398,6 +398,10 @@
     color: #b5dbfc !important;
 }
 
+[data-theme=dark] a.bg-warning, [data-theme=dark] a.btn-warning {
+    color: black !important;
+}
+
 [data-theme=dark] .btn-link:hover {
     color: #FFFFFF !important;
 }
